--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,12 @@
 body{
     text-align: center ;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: blue;
+    font-family:-apple-system, BlinkMacSystemFont, 
+                'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 
+                'Open Sans', 'Helvetica Neue', sans-serif ;
+    color: rgb(52, 25, 151);
+}
+
+#container{
+    width: 70%;
+    
 }
